--- a/app/code/Magento/Theme/view/frontend/templates/html/messages.phtml
+++ b/app/code/Magento/Theme/view/frontend/templates/html/messages.phtml
@@ -1,7 +1,30 @@
-<?php
+﻿<?php
 /**
  * Copyright © Magento, Inc. All rights reserved.
  * See COPYING.txt for license details.
  */
 ?>
 <div data-placeholder="messages"></div>
+<div class="container">
+  <h2>Today's Best Deals</h2>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
+    <ol class="carousel-indicators">
+      <li class="active" data-target="#myCarousel" data-slide-to="0"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="item active"><img style="width: 100%;" src="https://image.ibb.co/fvpNPR/Carousel1.jpg" alt="slide1" /></div>
+      <div class="item"><img style="width: 100%;" src="https://image.ibb.co/fvpNPR/Carousel1.jpg" alt="slide2" /></div>
+      <div class="item"><img style="width: 100%;" src="https://image.ibb.co/fvpNPR/Carousel1.jpg" alt="slide3" /></div>
+    </div>
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span> 
+    </a>
+  </div>
+</div>
